--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -2,9 +2,15 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background: linear-gradient(
+    180deg,
+    rgb(214, 186, 130) 0%,
+    rgba(205, 144, 70, 1) 100%
+  );
 }
 
 .content {
+
     flex: 1;
     @apply flex flex-col justify-start items-center mx-3 lg:mx-0;
 }
