--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -81,11 +81,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background: linear-gradient(
-    180deg,
-    rgb(214, 186, 130) 0%,
-    rgba(205, 144, 70, 1) 100%
-  );
+  background: #d6ba82;
   background-repeat: no-repeat;
 }
 
